trunk/Archive2/3f/fc4bb001be1fd2/output
main.cpp:13:1: error: expected unqualified-id before '}' token
 }
 ^
main.cpp:13:1: error: expected ';' after class definition
main.cpp: In function 'int main()':
main.cpp:20:1: error: expected primary-expression before '}' token
 }
 ^
