trunk/Archive2/3f/fc4bb001be1fd2/main.cpp
#include <iostream>
#include <string>
#include <vector>

class a
{
public:
    enum b
    {
        c,
        d
    }
}

int main()
{
    a::b lol;
    
    lol = a
}
